@@ -1,4 +1,3 @@
-// SecurityConfig.java
 package com.example.demo.config;
 
 import org.springframework.beans.factory.annotation.Autowired;
@@ -18,7 +17,6 @@ import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
-import java.util.List;
 
 @Configuration
 @EnableWebSecurity
@@ -35,39 +33,46 @@ public class SecurityConfig {
             .sessionManagement(session -> session
                 .sessionCreationPolicy(SessionCreationPolicy.STATELESS))
             .authorizeHttpRequests(auth -> auth
-                // Preflight OPTIONS — must be first
                 .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
-
-                // Auth endpoints
                 .requestMatchers("/api/auth/**").permitAll()
-
-                // All public endpoints
                 .requestMatchers("/api/public/**").permitAll()
-
-                // Public GET reads on clergy
                 .requestMatchers(HttpMethod.GET,
                     "/api/clergy/popes",
                     "/api/clergy/bishops",
                     "/api/clergy/stats"
                 ).permitAll()
-
-                // Everything else requires authentication
                 .anyRequest().authenticated()
             );
 
-        // JWT filter only runs for protected routes (shouldNotFilter handles the rest)
         http.addFilterBefore(jwtAuthFilter, UsernamePasswordAuthenticationFilter.class);
-
         return http.build();
     }
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("http://localhost:5173"));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "X-Requested-With"));
+
+        // ✅ setAllowedOriginPatterns compatível com allowCredentials = true
+        configuration.setAllowedOriginPatterns(Arrays.asList(
+            "https://apostolic-chain.vercel.app",
+            "https://apostolic-chain-*.vercel.app",
+            "http://localhost:*"
+        ));
+
+        configuration.setAllowedMethods(Arrays.asList(
+            "GET", "POST", "PUT", "DELETE", "OPTIONS"
+        ));
+
+        configuration.setAllowedHeaders(Arrays.asList(
+            "Authorization",
+            "Content-Type",
+            "X-Requested-With",
+            "Accept",
+            "Origin"
+        ));
+
         configuration.setAllowCredentials(true);
+        configuration.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
